fix(App): Add overflow
The T&Cs weren't sitting inside the root HTML elements, this fixes

IssueID #393

--- a/client/src/app.module.css
+++ b/client/src/app.module.css
@@ -19,6 +19,7 @@ main {
   height: 100%;
   color: var(--primary-text-color);
   background-color: #fff;
+  overflow: auto;
 }
 
 header {
